[gd_scene load_steps=2 format=3 uid="uid://e9yxn0qwxm6zjm"]

[ext_resource type="Script" path="res://src/investigation/EvidenceComparison.gd" id="1_evidence"]

[node name="EvidenceComparison" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_evidence")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.12, 0.1, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Evidence Comparison"
horizontal_alignment = 1

[node name="SplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 100.0
offset_right = -40.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPanel" type="Panel" parent="SplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="SplitContainer/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="SplitContainer/LeftPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="LeftTitle" type="Label" parent="SplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Document A"

[node name="LeftSource" type="Label" parent="SplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Source: Emperor's Archive"

[node name="HSeparator" type="HSeparator" parent="SplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LeftScroll" type="ScrollContainer" parent="SplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftText" type="RichTextLabel" parent="SplitContainer/LeftPanel/MarginContainer/VBoxContainer/LeftScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "This is the left document text. It will be compared with the right document."
fit_content = true

[node name="RightPanel" type="Panel" parent="SplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="SplitContainer/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="SplitContainer/RightPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="RightTitle" type="Label" parent="SplitContainer/RightPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Document B"

[node name="RightSource" type="Label" parent="SplitContainer/RightPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Source: Minister's Report"

[node name="HSeparator" type="HSeparator" parent="SplitContainer/RightPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RightScroll" type="ScrollContainer" parent="SplitContainer/RightPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RightText" type="RichTextLabel" parent="SplitContainer/RightPanel/MarginContainer/VBoxContainer/RightScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "This is the right document text. Compare it with the left document to find contradictions."
fit_content = true

[node name="ControlPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -80.0
offset_right = -40.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="ControlPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="HighlightButton" type="Button" parent="ControlPanel/HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Highlight Differences"

[node name="SyncScrollButton" type="CheckButton" parent="ControlPanel/HBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Sync Scroll"

[node name="MarkContradictionButton" type="Button" parent="ControlPanel/HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Mark Contradiction"

[node name="BackButton" type="Button" parent="ControlPanel/HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Back"

[connection signal="pressed" from="ControlPanel/HBoxContainer/HighlightButton" to="." method="_on_highlight_pressed"]
[connection signal="toggled" from="ControlPanel/HBoxContainer/SyncScrollButton" to="." method="_on_sync_scroll_toggled"]
[connection signal="pressed" from="ControlPanel/HBoxContainer/MarkContradictionButton" to="." method="_on_mark_contradiction_pressed"]
[connection signal="pressed" from="ControlPanel/HBoxContainer/BackButton" to="." method="_on_back_pressed"]
